--- a/kaihowl-stack.html
+++ b/kaihowl-stack.html
@@ -18,6 +18,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -66,6 +68,8 @@
         0.0,
         0.0,
         0.0,
+        0.0,
+        0.0,
         7.0,
         9.0,
         10.0,
@@ -106,6 +110,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -137,6 +143,8 @@
         6
       ],
       "y": [
+        0.0,
+        0.0,
         0.0,
         0.0,
         0.0,
@@ -210,6 +218,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -287,6 +297,8 @@
         0.0,
         0.0,
         0.0,
+        0.0,
+        0.0,
         0.0
       ],
       "name": "ubuntu-22.04",
@@ -298,6 +310,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -329,6 +343,8 @@
         6
       ],
       "y": [
+        0.0,
+        0.0,
         1.0,
         0.0,
         0.0,
@@ -402,6 +418,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -442,6 +460,8 @@
         0
       ],
       "y": [
+        12.0,
+        12.0,
         16.0,
         14.0,
         15.0,
@@ -490,6 +510,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -521,6 +543,8 @@
         6
       ],
       "y": [
+        0.0,
+        0.0,
         1.0,
         0.0,
         0.0,
@@ -594,6 +618,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -634,6 +660,8 @@
         0
       ],
       "y": [
+        3.0,
+        2.0,
         3.0,
         4.0,
         2.0,
@@ -682,6 +710,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -713,6 +743,8 @@
         6
       ],
       "y": [
+        4.0,
+        4.0,
         3.0,
         3.0,
         3.0,
@@ -786,6 +818,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -863,6 +897,8 @@
         0.0,
         0.0,
         0.0,
+        0.0,
+        0.0,
         0.0
       ],
       "name": "ubuntu-22.04",
@@ -874,6 +910,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -905,6 +943,8 @@
         6
       ],
       "y": [
+        0.0,
+        0.0,
         0.0,
         0.0,
         0.0,
@@ -978,6 +1018,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -1018,6 +1060,8 @@
         0
       ],
       "y": [
+        10.0,
+        9.0,
         10.0,
         9.0,
         10.0,
@@ -1066,6 +1110,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -1097,6 +1143,8 @@
         6
       ],
       "y": [
+        11.0,
+        10.0,
         11.0,
         16.0,
         12.0,
@@ -1170,6 +1218,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -1210,6 +1260,8 @@
         0
       ],
       "y": [
+        14.0,
+        13.0,
         14.0,
         13.0,
         13.0,
@@ -1258,6 +1310,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -1289,6 +1343,8 @@
         6
       ],
       "y": [
+        9.0,
+        9.0,
         11.0,
         13.0,
         9.0,
@@ -1362,6 +1418,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -1402,6 +1460,8 @@
         0
       ],
       "y": [
+        1.0,
+        2.0,
         1.0,
         1.0,
         2.0,
@@ -1450,6 +1510,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -1481,6 +1543,8 @@
         6
       ],
       "y": [
+        1.0,
+        1.0,
         1.0,
         1.0,
         1.0,
@@ -1554,6 +1618,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -1594,6 +1660,8 @@
         0
       ],
       "y": [
+        7.0,
+        7.0,
         7.0,
         7.0,
         7.0,
@@ -1642,6 +1710,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -1673,6 +1743,8 @@
         6
       ],
       "y": [
+        3.0,
+        3.0,
         2.0,
         4.0,
         3.0,
@@ -1746,6 +1818,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -1786,6 +1860,8 @@
         0
       ],
       "y": [
+        1.0,
+        1.0,
         1.0,
         6.0,
         1.0,
@@ -1834,6 +1910,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -1865,6 +1943,8 @@
         6
       ],
       "y": [
+        6.0,
+        6.0,
         3.0,
         3.0,
         3.0,
@@ -1938,6 +2018,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -1978,6 +2060,8 @@
         0
       ],
       "y": [
+        148.0,
+        140.0,
         147.0,
         149.0,
         142.0,
@@ -2026,6 +2110,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -2057,6 +2143,8 @@
         6
       ],
       "y": [
+        202.0,
+        195.0,
         179.0,
         231.0,
         176.0,
@@ -2130,6 +2218,26 @@
     {
       "type": "box",
       "x": [
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
         34,
         34,
         34,
@@ -2512,6 +2620,26 @@
         0
       ],
       "y": [
+        93742084.0,
+        91862104.0,
+        91470496.0,
+        93244547.0,
+        92435918.0,
+        90495975.0,
+        92616838.0,
+        92555873.0,
+        93435645.0,
+        93039511.0,
+        92092858.0,
+        93822859.0,
+        92884385.0,
+        93726349.0,
+        91568360.0,
+        93087056.0,
+        92722881.0,
+        92490003.0,
+        91093186.0,
+        93279404.0,
         88477197.0,
         87265132.0,
         87158859.0,
@@ -2902,6 +3030,26 @@
     {
       "type": "box",
       "x": [
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
         34,
         34,
         34,
@@ -3194,6 +3342,26 @@
         6
       ],
       "y": [
+        82552292.0,
+        80905833.0,
+        80174250.0,
+        79498709.0,
+        80129875.0,
+        80257416.0,
+        79422333.0,
+        81301209.0,
+        80121166.0,
+        79375584.0,
+        81710375.0,
+        79829833.0,
+        80457917.0,
+        80227750.0,
+        80785917.0,
+        79834375.0,
+        80983500.0,
+        80589875.0,
+        81320792.0,
+        80444500.0,
         80382625.0,
         75324000.0,
         75920625.0,
@@ -3726,6 +3894,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -3766,6 +3936,8 @@
         0
       ],
       "y": [
+        1.0,
+        0.0,
         0.0,
         0.0,
         0.0,
@@ -3814,6 +3986,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -3845,6 +4019,8 @@
         6
       ],
       "y": [
+        0.0,
+        0.0,
         0.0,
         1.0,
         1.0,
@@ -3918,6 +4094,26 @@
     {
       "type": "box",
       "x": [
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
         34,
         34,
         34,
@@ -4300,6 +4496,26 @@
         0
       ],
       "y": [
+        783895068.0,
+        75151028.0,
+        73958092.0,
+        73631414.0,
+        73129677.0,
+        73571710.0,
+        73420719.0,
+        73608349.0,
+        74156612.0,
+        73311845.0,
+        751053312.0,
+        71293929.0,
+        71359269.0,
+        71007622.0,
+        70669445.0,
+        70536305.0,
+        70753970.0,
+        70755648.0,
+        70651266.0,
+        71218175.0,
         783072114.0,
         71256149.0,
         70896976.0,
@@ -4690,6 +4906,26 @@
     {
       "type": "box",
       "x": [
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        39,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
+        35,
         34,
         34,
         34,
@@ -4982,6 +5218,26 @@
         6
       ],
       "y": [
+        662778375.0,
+        85961458.0,
+        85254833.0,
+        85772958.0,
+        85989208.0,
+        85616792.0,
+        89881208.0,
+        85645750.0,
+        85089250.0,
+        85172250.0,
+        625435625.0,
+        83055125.0,
+        82431625.0,
+        83237750.0,
+        82426000.0,
+        83096084.0,
+        82908875.0,
+        87131291.0,
+        84450917.0,
+        82776333.0,
         748532000.0,
         91068042.0,
         83910750.0,
@@ -5514,6 +5770,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -5554,6 +5812,8 @@
         0
       ],
       "y": [
+        151.0,
+        143.0,
         150.0,
         152.0,
         144.0,
@@ -5602,6 +5862,8 @@
     {
       "type": "box",
       "x": [
+        39,
+        35,
         34,
         33,
         32,
@@ -5633,6 +5895,8 @@
         6
       ],
       "y": [
+        205.0,
+        198.0,
         182.0,
         237.0,
         179.0,
@@ -8031,11 +8295,11 @@
         "4d9d11",
         "182601",
         "b78367",
-        "c0dc73",
-        "03420f",
-        "e687a7",
-        "a156ac",
-        "e0a7b4"
+        "87aeab",
+        "eb9caf",
+        "3ba946",
+        "64560d",
+        "25dbe3"
       ],
       "tickfont": {
         "family": "monospace"
