deploy: e39aace219dba24b1bfc6f3b38877e9df687f746

--- a/kaihowl-stack.html
+++ b/kaihowl-stack.html
@@ -461,7 +461,7 @@
         0
       ],
       "y": [
-        15.0,
+        24.0,
         13.0,
         14.0,
         34.0,
@@ -867,7 +867,7 @@
         0
       ],
       "y": [
-        88.0,
+        82.0,
         86.0,
         80.0,
         82.0,
@@ -949,7 +949,7 @@
         0
       ],
       "y": [
-        91.0,
+        85.0,
         87.0,
         85.0,
         88.0,
@@ -1030,7 +1030,7 @@
         0
       ],
       "y": [
-        175.0,
+        182.0,
         193.0,
         192.0,
         206.0,
@@ -1273,7 +1273,7 @@
         0
       ],
       "y": [
-        1.0,
+        2.0,
         1.0,
         1.0,
         3.0,
@@ -1923,7 +1923,7 @@
         0
       ],
       "y": [
-        88.0,
+        82.0,
         86.0,
         80.0,
         83.0,
@@ -2005,7 +2005,7 @@
         0
       ],
       "y": [
-        107.0,
+        111.0,
         103.0,
         102.0,
         125.0,
@@ -2086,7 +2086,7 @@
         0
       ],
       "y": [
-        185.0,
+        190.0,
         203.0,
         202.0,
         216.0,
@@ -2167,7 +2167,7 @@
         0
       ],
       "y": [
-        26.0,
+        21.0,
         20.0,
         23.0,
         29.0,
@@ -2249,7 +2249,7 @@
         0
       ],
       "y": [
-        36.0,
+        44.0,
         36.0,
         28.0,
         39.0,
@@ -2330,7 +2330,7 @@
         0
       ],
       "y": [
-        44.0,
+        43.0,
         43.0,
         41.0,
         38.0,
@@ -2970,16 +2970,16 @@
         0
       ],
       "y": [
-        97094698.0,
-        95635070.0,
-        99905290.0,
-        96670420.0,
-        96387793.0,
-        96129114.0,
-        97781436.0,
-        95726812.0,
-        95130300.0,
-        96368606.0,
+        95902805.0,
+        95793973.0,
+        96117394.0,
+        95056751.0,
+        95321586.0,
+        94452715.0,
+        94289498.0,
+        95581794.0,
+        95550644.0,
+        94809874.0,
         95528480.0,
         94285218.0,
         94392931.0,
@@ -3682,16 +3682,16 @@
         0
       ],
       "y": [
-        97226783.0,
-        96778725.0,
-        96227969.0,
-        96518270.0,
-        95484385.0,
-        95336784.0,
-        95548094.0,
-        95816291.0,
-        96205572.0,
-        95968522.0,
+        99480414.0,
+        97413010.0,
+        96842632.0,
+        95247484.0,
+        94845927.0,
+        96910177.0,
+        97507936.0,
+        98155493.0,
+        96365977.0,
+        98904013.0,
         96376408.0,
         96597976.0,
         96302101.0,
@@ -4384,16 +4384,16 @@
         0
       ],
       "y": [
-        105956250.0,
-        98147541.0,
-        98390708.0,
-        99581334.0,
-        97363875.0,
-        97173166.0,
-        98068584.0,
-        96854042.0,
-        95487250.0,
-        97400958.0,
+        100758667.0,
+        94224292.0,
+        94497083.0,
+        94232041.0,
+        95253916.0,
+        94325292.0,
+        94218083.0,
+        94275708.0,
+        94109167.0,
+        94248583.0,
         103446333.0,
         94162667.0,
         94158166.0,
@@ -5086,16 +5086,16 @@
         0
       ],
       "y": [
-        74748677.0,
-        81467222.0,
-        71561422.0,
-        72005983.0,
-        73430303.0,
-        72397609.0,
-        72157003.0,
-        73996637.0,
-        73361494.0,
-        71666770.0,
+        72772406.0,
+        72316472.0,
+        70528333.0,
+        72030465.0,
+        72648218.0,
+        72759512.0,
+        73421410.0,
+        72348011.0,
+        71060846.0,
+        71057569.0,
         75651744.0,
         70432917.0,
         73378186.0,
@@ -5798,16 +5798,16 @@
         0
       ],
       "y": [
-        74584613.0,
-        78013010.0,
-        75193661.0,
-        74105786.0,
-        73724506.0,
-        75074529.0,
-        73842255.0,
-        74521675.0,
-        74404237.0,
-        76400347.0,
+        73759422.0,
+        72814932.0,
+        75656789.0,
+        72644520.0,
+        72565750.0,
+        74461938.0,
+        73929276.0,
+        72705189.0,
+        73620161.0,
+        73690534.0,
         76995343.0,
         75286674.0,
         75524265.0,
@@ -6500,16 +6500,16 @@
         0
       ],
       "y": [
-        146767041.0,
-        74453250.0,
-        89224208.0,
-        73734958.0,
-        72530625.0,
-        71749625.0,
-        72119125.0,
-        71261083.0,
-        70313375.0,
-        70909042.0,
+        87956125.0,
+        72314334.0,
+        71564542.0,
+        71788000.0,
+        72622917.0,
+        71387167.0,
+        71839708.0,
+        71403792.0,
+        69427625.0,
+        71167666.0,
         86168750.0,
         71485833.0,
         71890958.0,
@@ -6887,7 +6887,7 @@
         0
       ],
       "y": [
-        116.0,
+        104.0,
         108.0,
         105.0,
         114.0,
@@ -6969,7 +6969,7 @@
         0
       ],
       "y": [
-        145.0,
+        157.0,
         141.0,
         132.0,
         166.0,
@@ -7050,7 +7050,7 @@
         0
       ],
       "y": [
-        231.0,
+        235.0,
         248.0,
         245.0,
         257.0,
@@ -7179,11 +7179,11 @@
         "82774c",
         "70e254",
         "a2299a",
-        "797f2a",
-        "41afc9",
-        "d6b486",
-        "6fa5ea",
-        "08910e"
+        "45e816",
+        "3a3bda",
+        "08499e",
+        "26dfaa",
+        "e39aac"
       ],
       "tickfont": {
         "family": "monospace"
